# gemv

./: .gitignore  CMakeLists.txt  README.md  gemv-benchmark.sh  gemv.sh
backends/: gemv-backend-cublas.c  gemv-backend-cuda.c  gemv-backend-hip.c  gemv-backend-hipblas.c
cmake/: FindCUDA.cmake  FindHIP.cmake
include/: gemv-backend-list.h  gemv-benchmark-backend-list.h  gemv-benchmark-defs.h.in  gemv-benchmark-impl.h  gemv-benchmark.h  gemv-cuda.h  gemv-defs.h.in  gemv-hip.h  gemv-impl.h  gemv.h
include/backends/: gemv-backend-cuda.h  gemv-backend-hip.h  gemv-backend.h
src/: gemv-api.c  gemv-benchmark-api.c  gemv-benchmark-cuda.c  gemv-benchmark-dummy.c  gemv-benchmark-hip.c  gemv-benchmark-impl.c  gemv-benchmark-log.c  gemv-cublas.c  gemv-cuda.c  gemv-dummy.c  gemv-hip.c  gemv-hipblas.c  gemv-impl.c  gemv-log.c  gemv.c
